districts here we go!!

--- a/sched.html
+++ b/sched.html
@@ -130,14 +130,14 @@
 								<td>3/16</td>
 							</tr>
 
-							<tr>
+							<tr class="progress">
 								<td><b>UIL Districts</b></td>
-								<td>3/23 - 3/25 @ Rock Hill HS</td>
+								<td>3/24 - 3/25 @ Rock Hill HS</td>
 							</tr>
 
-							<tr>
+							<tr class="progress">
 								<td><b><u>USACO US Open</u></b></td>
-								<td>3//24 - 3/27</td>
+								<td>3/24 - 3/27</td>
 							</tr>
 
 							<tr>
