Districts slay as per usual 🤪

--- a/sched.html
+++ b/sched.html
@@ -130,7 +130,7 @@
 								<td>3/16</td>
 							</tr>
 
-							<tr class="progress">
+							<tr class="complete">
 								<td><b>UIL Districts</b></td>
 								<td>3/24 - 3/25 @ Rock Hill HS</td>
 							</tr>
