--- a/sched.html
+++ b/sched.html
@@ -135,7 +135,7 @@
 								<td>3/24 - 3/25 @ Rock Hill HS</td>
 							</tr>
 
-							<tr class="progress">
+							<tr class="complete">
 								<td><b><u>USACO US Open</u></b></td>
 								<td>3/24 - 3/27</td>
 							</tr>
