--- a/sched.html
+++ b/sched.html
@@ -140,12 +140,12 @@
 								<td>3/24 - 3/27</td>
 							</tr>
 
-							<tr>
+							<tr class="progress">
 								<td><b>VC Regionals</b></td>
 								<td>4/3 - 4/18</td>
 							</tr>
 
-							<tr>
+							<tr class="complete">
 								<td><b><u>USAPhO</u></b></td>
 								<td>4/4</td>
 							</tr>
