--- a/sched.html
+++ b/sched.html
@@ -140,7 +140,7 @@
 								<td>3/24 - 3/27</td>
 							</tr>
 
-							<tr class="progress">
+							<tr class="complete">
 								<td><b>VC Regionals</b></td>
 								<td>4/3 - 4/18</td>
 							</tr>
