--- a/sched.html
+++ b/sched.html
@@ -150,7 +150,7 @@
 								<td>4/4</td>
 							</tr>
 
-							<tr class="progress">
+							<tr class="complete">
 								<td><b>UIL Regionals</b></td>
 								<td>4/21 - 4/22 @ Rock Hill HS</td>
 							</tr>
