AP exams may be going on, but VC state starts

--- a/sched.html
+++ b/sched.html
@@ -155,7 +155,7 @@
 								<td>4/21 - 4/22 @ Rock Hill HS</td>
 							</tr>
 
-							<tr>
+							<tr class="progress">
 								<td><b>VC State</b></td>
 								<td>5/1 - 5/13</td>
 							</tr>
