AND BREATHE uil is now done for 2023

--- a/sched.html
+++ b/sched.html
@@ -160,7 +160,7 @@
 								<td>5/1 - 5/13</td>
 							</tr>
 
-							<tr>
+							<tr class="complete">
 								<td><b>UIL State</b></td>
 								<td>5/17 - 5/18 @ UT Austin</td>
 							</tr>
