changed majority of stuff to get ready for 23/24 season

--- a/desc/computer_applications.html
+++ b/desc/computer_applications.html
@@ -19,7 +19,6 @@
 			<div class="container">
 				<h2>Points of Contact: <ul>
 					<li> Andrew Bourinski <font size="+1"><u>andrew.bourinski@student.allenisd.org</u></font> </li>
-					<li> Pratham Patel <font size="+1"><u>pratham.patel@student.allenisd.org</u></font> </li>
 					<li> Warith Rahman <font size="+1"><u>warith.rahman@student.allenisd.org</u></font> </li>
 				</ul></h2>
 				<div class="row">
@@ -46,7 +45,7 @@
 
 						<h4>Resources</h4>
 						<ul>
-							<li><a href="https://www.uiltexas.org/files/academics/2022-Starter-Files.zip" target="_blank">2022 
+							<li><a href="https://www.uiltexas.org/files/academics/2023-Starter-Files.zip">2023 
 								Starter Files</a></li>
 
 							<li><a href="https://www.uiltexas.org/files/academics/UIL-HOW-TO-BUILD-A-DATABASE-VIDEO.mp4" 
