--- a/desc/science.html
+++ b/desc/science.html
@@ -58,7 +58,7 @@
 								<li><a href="https://docs.google.com/document/d/1IGtNLeaih5Dkkjaq_052apVOUmgKNyYujydRHWnM_uw/edit?usp=sharing" 
 									target="_blank">AP Bio from Warith's 21/22 BILL</a> 
 									(comment permissions are enabled)</li>
-								<li><i>Campbell Biology</i> 11th Edition</li>
+								<li><i>Campbell Biology</i> 12th Edition</li>
 							</ul>
 
 							<h5>Chemistry</h5>
@@ -72,8 +72,8 @@
 
 							<h5>Physics</h5>
 							<ul>
-								<li>2022-2023 Physics Book: <i>QED: The Strange Theory of Light and Matter</i> 
-									by Richard Feynman</li>
+								<li>2023-2024 Physics Book: <i>Five Equations that Changed the World: The Power and Poetry of Mathematics</i> 
+									by Dr. Michael Guillen</li>
 
 								<li><a href="https://www.uiltexas.org/files/academics/Physics-Director-Notes-2022-2023.pdf" 
 									target="_blank">2022-2023 Physics Topic List</a></li>
