--- a/desc/social_studies.html
+++ b/desc/social_studies.html
@@ -36,8 +36,8 @@
 
 						<h4>Resources</h4>
 						<ul>
-							<li><a href="https://www.uiltexas.org/files/academics/FINAL_2022-2023_Social_Studies_Reading_List_and_Terms_8_1_22_(2).pdf" 
-								target="_blank">2022-2023 Reading List (WWI to the Great Depression)
+							<li><a href="https://www.uiltexas.org/files/academics/Tentative_2023-2024_Social_Studies_Reading_List_and_Terms-1.pdf" 
+								target="_blank">2023-2024 Reading List (Modern South Asia from 1857 Onwards)
 								</a></li>
 						</ul>
 					</section>
