--- a/index.html
+++ b/index.html
@@ -39,9 +39,8 @@
 						the acronym "UIL" in 1913. It features three primary areas: athletics, arts, and academics. The academic 
 						side of this focuses on a variety of competitions for students to show off their expertise, whether that 
 						be in STEM, a humanities competition, or even something not necessarily either!</p>
-						<p>Allen's been participating in this for a while, and just recently we finished 2nd sweepstakes at the 
-						2022 State competition (trophy on right), including having 2 individual state champions and having the best 
-						6A spelling team for two years running!</p>
+						<p>Allen's been participating in this for a while, and just recently we finished 1st sweepstakes at the 
+						2023 State competition (trophy on right), including having 3 1st place teams in the state and having the best 6A spelling team for three years running!</p>
 						<br>
 						<h2>How do I join?</h2>
 						<p>If school just started at the time you're reading this, the UIL info meeting would probably be in late 
@@ -61,8 +60,8 @@
 						<h2>How are teams for District (and beyond) decided?</h2>
 						<p>As I mentioned, we have both practice meetings and interschool competitions throughout the year. As 
 						these progress, our coaches work together to pick the best of the best from all our competitors. With 
-						some exceptions, each team sent to Districts will typically have 4 people (exceptions include 3 in Computer 
-						Apps and 6 in Science). These teams are typically announced the week after Spring Break, about 2 weeks 
+						some exceptions, each team sent to Districts will typically have <b>6</b> people (exceptions include 3 in Computer 
+						Apps), which is different from past years. These teams are typically announced the week after Spring Break, about 2 weeks 
 						prior to Districts.</p>
 						<p>These people then represent us at our District meet. The top 3 individuals and the top team in each 
 						category get the honor of advancing to Regionals, and the same advancement rules apply to get to State. 
@@ -78,8 +77,8 @@
 						<br>
 					</section>
 					<section class="col-md-4 col-xl-4">
-						<a href="https://www.youtube.com/watch?v=qoq8B8ThgEM"><img src="images/trophy_2022.png" 
-						alt="2nd Sweepstakes Trophy" style="max-width: 100%; height: auto;"></a>
+						<a href="https://www.youtube.com/watch?v=qoq8B8ThgEM"><img src="images/trophy_2023.png" 
+						alt="1st Sweepstakes Trophy" style="max-width: 100%; height: auto;"></a>
 					</section>
 				</div>
 			</div>
