--- a/sched.html
+++ b/sched.html
@@ -45,124 +45,124 @@
 							</tr>
 						</table>
 						<br><br>
-						<h2>Competition Schedule 2022-2023</h2>
+						<h2>Competition Schedule 2023-2024</h2>
 						<p>Competitions highlighted in green have already passed, and those in yellow are windows in progress. 
-							Underlined competitions are not directly affiliated with UIL (anything other than UIL and VCs).</p>
+							Underlined competitions are not directly affiliated with UIL (aka anything other than UIL Meets and VCs).</p>
 						<!-- class names are 'progress' and 'complete' -->
 						<table>
-							<tr class="complete">
+							<tr>
 								<td><b>VC#1</b></td>
-								<td>10/3 - 10/29</td>
+								<td>TBD</td>
 							</tr>
 
-							<tr class="complete">
+							<tr>
 								<td><b><u>AMC 10/12 A</u></b></td>
-								<td>11/10</td>
+								<td>11/8</td>
 							</tr>
 
-							<tr class="complete">
+							<tr>
 								<td><b><u>AMC 10/12 B</u></b></td>
-								<td>11/16</td>
+								<td>11/14</td>
 							</tr>
 
-							<tr class="complete">
+							<tr>
 								<td><b>VC#2</b></td>
-								<td>11/14 - 12/10</td>
+								<td>TBD</td>
 							</tr>
 
-							<tr class="complete">
+							<tr>
 								<td><b><u>USACO December</u></b></td>
-								<td>12/16 - 12/19</td>
+								<td>TBD</td>
 							</tr>
 
-							<tr class="complete">
+							<tr>
 								<td><b>VC#3</b></td>
-								<td>1/9 - 1/28</td>
+								<td>TBD</td>
 							</tr>
 
-							<tr class="complete">
+							<tr>
 								<td><b><u>USACO January</u></b></td>
-								<td>1/27 - 1/30</td>
+								<td>TBD</td>
 							</tr>
 
-							<tr class="complete">
+							<tr>
 								<td><b>Invitational A</b></td>
-								<td>1/28 @ Flower Mound 9th Grade Campus</td>
+								<td>TBD @ Flower Mound 9th Grade Campus</td>
 							</tr>
 
-							<tr class="complete">
+							<tr>
 								<td><b><u>USABO Open Round</u></b></td>
-								<td>2/2</td>
+								<td>TBD</td>
 							</tr>
 
-							<tr class="complete">
+							<tr>
 								<td><b><u>F=ma</u></b></td>
-								<td>2/9</td>
+								<td>TBD</td>
 							</tr>
 
-							<tr class="complete">
+							<tr>
 								<td><b>Invitational B</b></td>
-								<td>2/11 @ Rock Hill HS</td>
+								<td>TBD @ Rock Hill HS</td>
 							</tr>
 
-							<tr class="complete">
+							<tr>
 								<td><b>VC#4</b></td>
-								<td>2/13 - 3/4</td>
+								<td>TBD</td>
 							</tr>
 
-							<tr class="complete">
+							<tr>
 								<td><b><u>AIME II</u></b></td>
-								<td>2/15</td>
+								<td>2/7</td>
 							</tr>
 
-							<tr class="complete">
+							<tr>
 								<td><b><u>USACO February</u></b></td>
-								<td>2/24 - 2/27</td>
+								<td>TBD</td>
 							</tr>
 							
-							<tr class="complete">
+							<tr>
 								<td><b>TMSCA Meet</b></td>
-								<td>3/4 @ Highland Park</td>
+								<td>TBD @ Highland Park</td>
 							</tr>
 
-							<tr class="complete">
+							<tr>
 								<td><b><u>USABO Semifinals</u></b></td>
-								<td>3/16</td>
+								<td>TBD</td>
 							</tr>
 
-							<tr class="complete">
-								<td><b>UIL Districts</b></td>
-								<td>3/24 - 3/25 @ Rock Hill HS</td>
-							</tr>
-
-							<tr class="complete">
+							<tr>
 								<td><b><u>USACO US Open</u></b></td>
-								<td>3/24 - 3/27</td>
+								<td>TBD</td>
 							</tr>
 
-							<tr class="complete">
+							<tr>
+								<td><b>UIL Districts</b></td>
+								<td>4/5 - 4/6 @ Rock Hill HS</td>
+							</tr>
+
+							<tr>
 								<td><b>VC Regionals</b></td>
-								<td>4/3 - 4/18</td>
+								<td>TBD</td>
 							</tr>
 
-							<tr class="complete">
+							<tr>
 								<td><b><u>USAPhO</u></b></td>
-								<td>4/4</td>
+								<td>TBD</td>
 							</tr>
 
-							<tr class="complete">
+							<tr>
 								<td><b>UIL Regionals</b></td>
-								<td>4/21 - 4/22 @ Rock Hill HS</td>
+								<td>4/26 - 4/27 @ Rock Hill HS</td>
 							</tr>
 
-							<tr class="complete">
+							<tr>
 								<td><b>VC State</b></td>
-								<td>5/1 - 5/13</td>
+								<td>TBD</td>
 							</tr>
 
-							<tr class="complete">
+							<tr>
 								<td><b>UIL State</b></td>
-								<td>5/17 - 5/18 @ UT Austin</td>
+								<td>5/13 - 5/15 @ UT Austin</td>
 							</tr>
 						</table>
 					</section>
