--- a/desc/number_sense.html
+++ b/desc/number_sense.html
@@ -21,10 +21,10 @@
 				<div class="row">
 					<section class="col-md-8 col-xl-9">
 						<p>This competition is quite literally the definition of speed. Number Sense is a test of quickly solving 
-						math problems, and even better you don't get to use a calculator or write down work!! All calculations 
-						have to be done manually, but of course with such a daunting contest there's a huge load of tricks to 
-						guide competitors along the way. Although doing 80 questions in 10 minutes seems very daunting, very little 
-						people finish all the questions within the time limit, and many still place high without it.</p>
+						math problems, and even better you don't get to use a calculator, write down work, or change your answers!! 
+						All calculations have to be done manually, but of course with such a daunting contest there's a huge load of 
+						tricks to guide competitors along the way. Although doing 80 questions in 10 minutes seems very daunting, 
+						very few people finish all the questions within the time limit, and many still place high without it.</p>
 						<ul>
 							<li>80 questions</li>
 							<li>10 minutes</li>
@@ -35,6 +35,7 @@
 								<li>-4 for skipping a question (not answering a question before the last attempted)</li>
 							</ul>
 							<li>Only mental math allowed i.e. scratch work or calculators will get you DQed</li>
+							<li>Must write all answers with a blue ink pen, and no changing answers (a crossed-out answer will be counted as incorrect)</li>
 						</ul>
 
 						<h4>Resources</h4>
