remove practice test link
Can’t let opposition have these…smh

--- a/index.html
+++ b/index.html
@@ -28,10 +28,7 @@
 						offered, our practice schedule, and a mini FAQ below. Hope this helps everyone a lot, and if you have any 
 						questions or suggestions you can contact me <a style="color: #000" 
 						href="https://warithr621.github.io/media.html"><u>here</u></a>.</p>
-						<p>By the way, <a 
-							href="https://drive.google.com/drive/folders/1gtCfNwZEVMHwKLcMb1uK-nMaLVpSHp6y?usp=sharing">
-							this drive folder</a> should have a couple of past tests available for Calculator, Computer 
-							Science, General Math, Number Sense, and Science. You should also join the Discord server for more 
+						<p>You should also join the Discord server for more 
 							updates <a href="https://discord.gg/5zWEJhWtud">here</a>.</p>
 						<br>
 						<h2>What is Academic UIL?</h2>
