Updated info for 23/24 season
New coaches :thinking:

--- a/desc/calculator.html
+++ b/desc/calculator.html
@@ -17,7 +17,7 @@
 		</header>
 		<main>
 			<div class="container">
-				<h2>Coach: Mrs. Tuerck <font size="+1"><u>nada.tuerck@allenisd.org</u></font></h2>
+				<h2>Coach: Mr. Rush <font size="+1"><u>jacobw.rush@allenisd.org</u></font></h2>
 				<div class="row">
 					<section class="col-md-8 col-xl-9">
 						<p>As the name might suggest, this competition revolves a lot around calculators. Calculator's a 
