--- a/desc/current_events.html
+++ b/desc/current_events.html
@@ -17,7 +17,7 @@
 		</header>
 		<main>
 			<div class="container">
-				<h2>Coach: Mrs. Hodson <font size="+1"><u>nancy.terneshodson@allenisd.org</u></font></h2>
+				<h2>Coach: TBA</h2>
 				<div class="row">
 					<section class="col-md-8 col-xl-9">
 						<p>Current Events is a test that quizzes students on their knowledge of events from approximately the 
