--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						questions or suggestions you can contact me <a style="color: #000" 
 						href="https://warithr621.github.io/media.html"><u>here</u></a>.</p>
 						<p>You should also join the Discord server for more 
-							updates <a href="https://discord.gg/5zWEJhWtud">here</a>.</p>
+							updates and practice resources <a href="https://discord.gg/5zWEJhWtud">here</a>.</p>
 						<br>
 						<h2>What is Academic UIL?</h2>
 						<p>UIL is the University Interscholastic League, founded as two separate competitions before merging under 
@@ -40,19 +40,18 @@
 						2023 State competition (trophy on right), including having 3 1st place teams in the state and having the best 6A spelling team for three years running!</p>
 						<br>
 						<h2>How do I join?</h2>
-						<p>If school just started at the time you're reading this, the UIL info meeting would probably be in late 
-						August or early September, most likely at Lowery. If the meeting had already happened, you could try either 
-						asking someone who you know is in UIL, or try emailing Mrs. Tuerck at nada.tuerck@allenisd.org</a> 
+						<p>If school just started at the time you're reading this, the UIL info meeting will typically be in late August at Lowery (tentatively August 29th for 23/24). If the meeting had already happened, you could try either 
+						asking someone who you know is in UIL, or try emailing Ms. Lanier at kathryn.lanier@allenisd.org</a> 
 							for more info on how to join.</p>
 						<br>
 						<h2>When are competitions?</h2>
 						<p>The fall semester is primarily practices, which occur on a weekly basis at either Allen High School 
 						or the Lowery Freshman Center. From January through March we start going to practice competitions called 
-						<u>UIL Invitationals</u> that occur throughout the DFW complex. Late March introduces the <u>UIL District 
+						<u>UIL Invitationals</u> that occur throughout the DFW complex. Late March / early April introduces the <u>UIL District 
 						competition</u>, where we send our best to face off against cities like McKinney, Little Elm, Denton, and 
-						Prosper. Those who qualify for <u>UIL Regionals</u> compete in mid-April against many other schools in
+						Prosper. Those who qualify for <u>UIL Regionals</u> compete in late-April against many other schools in
 						North Texas and around DFW, and the best of the best get to travel to UT Austin for the <u>State</u> 
-						competition in early May.</p>
+						competition in May.</p>
 						<br>
 						<h2>How are teams for District (and beyond) decided?</h2>
 						<p>As I mentioned, we have both practice meetings and interschool competitions throughout the year. As 
@@ -62,7 +61,7 @@
 						prior to Districts.</p>
 						<p>These people then represent us at our District meet. The top 3 individuals and the top team in each 
 						category get the honor of advancing to Regionals, and the same advancement rules apply to get to State. 
-						It's even possible to get into multiple teams (even up to 6 different ones!).</p>
+						It's even possible to get into multiple teams (from personal experience, the sky's the limit!).</p>
 						<br>
 						<h2>Can I still participate even if I don't think I'm good enough?</h2>
 						<p>Whether you think you're good or not, I think you should still try to give this a shot to see how it 
