--- a/sched.html
+++ b/sched.html
@@ -20,7 +20,7 @@
 		</header>
 		<main>
 			<div class="container">
-				<h2>Practice Schedule</h2>
+				<h2>Practice Schedule (Subject to Change!)</h2>
 				<div class="row">
 					<section class="col-md-8 col-xl-9">
 						<table>
@@ -34,14 +34,6 @@
 								<td rowspan="3"><u>Computer Science</u><br>Lowery @ Lower D Pod<br>*Every Other Week</td>
 								<td rowspan="3"><u>Science</u><br>Lowery @ Lower E Pod</td>
 								<td><u>Math (NS, CAL, GM)</u><br>Lowery @ Lower D Pod</td>
-							</tr>
-
-							<tr>
-								<td><u>Current Events</u><br>AHS @ F224</td>
-							</tr>
-							
-							<tr>
-								<td><u>Spelling</u><br>AHS @ F224</td>
 							</tr>
 						</table>
 						<br><br>
