--- a/desc/spelling.html
+++ b/desc/spelling.html
@@ -17,7 +17,7 @@
 		</header>
 		<main>
 			<div class="container">
-				<h2>Coach: Mrs. Hodson <font size="+1"><u>nancy.terneshodson@allenisd.org</u></font></h2>
+				<h2>Coach: Ms. Flanagan <font size="+1"><u>stacey.flanagan@allenisd.org</u></font></h2>
 				<div class="row">
 					<section class="col-md-8 col-xl-9">
 						<p>Spelling in UIL is not exactly your typical Spelling Bee anymore, rather having several twists. The 
