Added Instagram account to info

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 						questions or suggestions you can contact me <a style="color: #000" 
 						href="https://warithr621.github.io/media.html"><u>here</u></a>.</p>
 						<p>You should also join the Discord server for more 
-							updates and practice resources <a href="https://discord.gg/5zWEJhWtud">here</a>.</p>
+							updates and practice resources <a href="https://discord.gg/5zWEJhWtud">here</a>, and follow the Instagram account to see 
+							more regular updates <a href="​​https://www.instagram.com/allenhs_uil/">here</a>.</p>
 						<br>
 						<h2>What is Academic UIL?</h2>
 						<p>UIL is the University Interscholastic League, founded as two separate competitions before merging under 
