Fixed broken links

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						href="https://warithr621.github.io/media.html"><u>here</u></a>.</p>
 						<p>You should also join the Discord server for more 
 							updates and practice resources <a href="https://discord.gg/5zWEJhWtud">here</a>, and follow the Instagram account to see 
-							more regular updates <a href="​​https://www.instagram.com/allenhs_uil/">here</a>.</p>
+							more regular updates <a href="https://www.instagram.com/allenhs_uil/">here</a>.</p>
 						<br>
 						<h2>What is Academic UIL?</h2>
 						<p>UIL is the University Interscholastic League, founded as two separate competitions before merging under 
@@ -41,9 +41,9 @@
 						2023 State competition (trophy on right), including having 3 1st place teams in the state and having the best 6A spelling team for three years running!</p>
 						<br>
 						<h2>How do I join?</h2>
-						<p>If school just started at the time you're reading this, the UIL info meeting will typically be in late August at Lowery (tentatively August 29th for 23/24). If the meeting had already happened, you could try either 
+						<p>If school just started at the time you're reading this, the UIL info meeting will typically be in late August at Lowery (August 29th for 23/24). If the meeting had already happened, you could try either 
 						asking someone who you know is in UIL, or try emailing Ms. Lanier at kathryn.lanier@allenisd.org</a> 
-							for more info on how to join.</p>
+							for more info on how to join. You can also view those meeting slides <a href="https://docs.google.com/presentation/d/1gn50nAyNOuv7QN7H37PUwdtHwrVdTDOpllJ4zKqz3Q0/edit?usp=sharing">at this link</a>.</p>
 						<br>
 						<h2>When are competitions?</h2>
 						<p>The fall semester is primarily practices, which occur on a weekly basis at either Allen High School 
