Updated some stuff - new thing that says last update - new schedule changes

--- a/sched.html
+++ b/sched.html
@@ -46,6 +46,11 @@
 								<td><b>VC#1</b></td>
 								<td>10/2 - 10/28</td>
 							</tr>
+							
+							<tr>
+								<td><b>TMSCA Meet</b></td>
+								<td>10/28 @ Highland Park</td>
+							</tr>
 
 							<tr>
 								<td><b><u>AMC 10/12 A</u></b></td>
@@ -93,13 +98,13 @@
 							</tr>
 
 							<tr>
-								<td><b>Invitational B</b></td>
-								<td>TBD</td>
+								<td><b><u>AIME II</u></b></td>
+								<td>2/7</td>
 							</tr>
 
 							<tr>
-								<td><b><u>AIME II</u></b></td>
-								<td>2/7</td>
+								<td><b>Invitational B</b></td>
+								<td>2/10 @ Rock Hill HS</td>
 							</tr>
 
 							<tr>
@@ -110,11 +115,6 @@
 							<tr>
 								<td><b><u>USACO February</u></b></td>
 								<td>TBD</td>
-							</tr>
-							
-							<tr>
-								<td><b>TMSCA Meet</b></td>
-								<td>TBD @ Highland Park</td>
 							</tr>
 
 							<tr>
@@ -165,6 +165,7 @@
 			<p class="footnote" style="color:#fff">Made by Warith Rahman via GitHub. Design inspired by 
 			<a href="https://www.ekzhang.com" target="_blank">Eric Zhang</a></p>
 			<p class="footnote" style="color:#fff">This site is unofficial, and not managed/sponsored by Allen ISD.</p>
+			<p class="footnote" style="color:#fff">Updated up to September 20, 2023.</p>
 		</footer>
 	</body>
 </html>
