--- a/subj.html
+++ b/subj.html
@@ -82,6 +82,7 @@
 			<p class="footnote" style="color:#fff">Made by Warith Rahman via GitHub. Design inspired by 
 			<a href="https://www.ekzhang.com" target="_blank">Eric Zhang</a></p>
 			<p class="footnote" style="color:#fff">This site is unofficial, and not managed/sponsored by Allen ISD.</p>
+			<p class="footnote" style="color:#fff">Updated up to September 20, 2023.</p>
 		</footer>
 	</body>
 </html>
