--- a/sched.html
+++ b/sched.html
@@ -42,7 +42,7 @@
 							Underlined competitions are not directly affiliated with UIL (aka anything other than UIL Meets and VCs).</p>
 						<!-- class names are 'progress' and 'complete' -->
 						<table>
-							<tr>
+							<tr class="progress">
 								<td><b>VC#1</b></td>
 								<td>10/2 - 10/28</td>
 							</tr>
@@ -165,7 +165,7 @@
 			<p class="footnote" style="color:#fff">Made by Warith Rahman via GitHub. Design inspired by 
 			<a href="https://www.ekzhang.com" target="_blank">Eric Zhang</a></p>
 			<p class="footnote" style="color:#fff">This site is unofficial, and not managed/sponsored by Allen ISD.</p>
-			<p class="footnote" style="color:#fff">Updated up to September 20, 2023.</p>
+			<p class="footnote" style="color:#fff">Updated up to October 4, 2023.</p>
 		</footer>
 	</body>
 </html>
