HP and VC1 Done!

--- a/sched.html
+++ b/sched.html
@@ -42,12 +42,12 @@
 							Underlined competitions are not directly affiliated with UIL (aka anything other than UIL Meets and VCs).</p>
 						<!-- class names are 'progress' and 'complete' -->
 						<table>
-							<tr class="progress">
+							<tr class="complete">
 								<td><b>VC#1</b></td>
 								<td>10/2 - 10/28</td>
 							</tr>
 							
-							<tr>
+							<tr class="complete">
 								<td><b>TMSCA Meet</b></td>
 								<td>10/28 @ Highland Park</td>
 							</tr>
