--- a/sched.html
+++ b/sched.html
@@ -52,12 +52,12 @@
 								<td>10/28 @ Highland Park</td>
 							</tr>
 
-							<tr>
+							<tr class="complete">
 								<td><b><u>AMC 10/12 A</u></b></td>
 								<td>11/8</td>
 							</tr>
 
-							<tr>
+							<tr class="progress">
 								<td><b>VC#2</b></td>
 								<td>11/13 - 12/9</td>
 							</tr>
