--- a/sched.html
+++ b/sched.html
@@ -62,7 +62,7 @@
 								<td>11/13 - 12/9</td>
 							</tr>
 							
-							<tr>
+							<tr class="complete">
 								<td><b><u>AMC 10/12 B</u></b></td>
 								<td>11/14</td>
 							</tr>
