--- a/sched.html
+++ b/sched.html
@@ -78,12 +78,12 @@
 							</tr>
 
 							<tr>
-								<td><b><u>USACO January</u></b></td>
-								<td>TBD</td>
+								<td><b>Invitational A</b></td>
+								<td>Tentatively 1/13 @ Princeton HS</td>
 							</tr>
 
 							<tr>
-								<td><b>Invitational A</b></td>
+								<td><b><u>USACO January</u></b></td>
 								<td>TBD</td>
 							</tr>
 
