New Schedule Updates
no way USABO and AIME conflict...

--- a/sched.html
+++ b/sched.html
@@ -57,7 +57,7 @@
 								<td>11/8</td>
 							</tr>
 
-							<tr class="progress">
+							<tr class="complete">
 								<td><b>VC#2</b></td>
 								<td>11/13 - 12/9</td>
 							</tr>
@@ -79,7 +79,7 @@
 
 							<tr>
 								<td><b>Invitational A</b></td>
-								<td>Tentatively 1/13 @ Princeton HS</td>
+								<td>1/13 @ Princeton HS</td>
 							</tr>
 
 							<tr>
@@ -93,8 +93,8 @@
 							</tr>
 
 							<tr>
-								<td><b><u>AIME II</u></b></td>
-								<td>2/7</td>
+								<td><b><u>AIME I</u></b></td>
+								<td>2/1</td>
 							</tr>
 
 							<tr>
@@ -165,7 +165,7 @@
 			<p class="footnote" style="color:#fff">Made by Warith Rahman via GitHub. Design inspired by 
 			<a href="https://www.ekzhang.com" target="_blank">Eric Zhang</a></p>
 			<p class="footnote" style="color:#fff">This site is unofficial, and not managed/sponsored by Allen ISD.</p>
-			<p class="footnote" style="color:#fff">Updated up to October 4, 2023.</p>
+			<p class="footnote" style="color:#fff">Updated up to December 9, 2023.</p>
 		</footer>
 	</body>
 </html>
