--- a/sched.html
+++ b/sched.html
@@ -67,12 +67,12 @@
 								<td>11/14</td>
 							</tr>
 
-							<tr>
+							<tr class="complete">
 								<td><b><u>USACO December</u></b></td>
 								<td>12/15 - 12/18</td>
 							</tr>
 
-							<tr>
+							<tr class="progress">
 								<td><b>VC#3</b></td>
 								<td>1/8 - 1/27</td>
 							</tr>
@@ -165,7 +165,7 @@
 			<p class="footnote" style="color:#fff">Made by Warith Rahman via GitHub. Design inspired by 
 			<a href="https://www.ekzhang.com" target="_blank">Eric Zhang</a></p>
 			<p class="footnote" style="color:#fff">This site is unofficial, and not managed/sponsored by Allen ISD.</p>
-			<p class="footnote" style="color:#fff">Updated up to December 9, 2023.</p>
+			<p class="footnote" style="color:#fff">Updated up to January 9, 2023.</p>
 		</footer>
 	</body>
 </html>
