--- a/sched.html
+++ b/sched.html
@@ -82,32 +82,32 @@
 								<td>1/13 @ Princeton HS</td>
 							</tr>
 
-							<tr class="progress">
+							<tr class="complete">
 								<td><b><u>USACO January</u></b></td>
 								<td>1/26 - 1/29</td>
 							</tr>
 
-							<tr>
+							<tr class="complete">
 								<td><b><u>USABO Open Round</u></b></td>
 								<td>2/1</td>
 							</tr>
 
-							<tr>
+							<tr class="complete">
 								<td><b><u>AIME I</u></b></td>
 								<td>2/1</td>
 							</tr>
 
-							<tr>
+							<tr class="complete">
 								<td><b><u>F=ma</u></b></td>
 								<td>2/8</td>
 							</tr>
 
-							<tr>
+							<tr class="complete">
 								<td><b>Invitational B</b></td>
 								<td>2/10 @ Rock Hill HS</td>
 							</tr>
 
-							<tr>
+							<tr class="progress">
 								<td><b>VC#4</b></td>
 								<td>2/12 - 3/2</td>
 							</tr>
@@ -165,7 +165,7 @@
 			<p class="footnote" style="color:#fff">Made by Warith Rahman via GitHub. Design inspired by 
 			<a href="https://www.ekzhang.com" target="_blank">Eric Zhang</a></p>
 			<p class="footnote" style="color:#fff">This site is unofficial, and not managed/sponsored by Allen ISD.</p>
-			<p class="footnote" style="color:#fff">Updated up to January 26, 2023.</p>
+			<p class="footnote" style="color:#fff">Updated up to February 14, 2024.</p>
 		</footer>
 	</body>
 </html>
