--- a/sched.html
+++ b/sched.html
@@ -107,14 +107,19 @@
 								<td>2/10 @ Rock Hill HS</td>
 							</tr>
 
-							<tr class="progress">
+							<tr class="complete">
 								<td><b>VC#4</b></td>
 								<td>2/12 - 3/2</td>
 							</tr>
 							
-							<tr>
+							<tr class="complete">
 								<td><b><u>USACO February</u></b></td>
 								<td>2/16 - 2/19</td>
+							</tr>
+
+							<tr class="complete">
+								<td><b>TMSCA 13</b></td>
+								<td>3/2 @ Highland Park</td>
 							</tr>
 
 							<tr>
