--- a/sched.html
+++ b/sched.html
@@ -122,17 +122,17 @@
 								<td>3/2 @ Highland Park</td>
 							</tr>
 
-							<tr>
+							<tr class="complete">
 								<td><b><u>USACO US Open</u></b></td>
 								<td>3/15 - 3/18</td>
 							</tr>
 
-							<tr>
+							<tr class="complete">
 								<td><b><u>USABO Semifinals</u></b></td>
 								<td>4/4</td>
 							</tr>
 
-							<tr>
+							<tr class="complete">
 								<td><b>UIL Districts</b></td>
 								<td>4/5 - 4/6 @ Rock Hill HS</td>
 							</tr>
