--- a/sched.html
+++ b/sched.html
@@ -128,6 +128,11 @@
 							</tr>
 
 							<tr class="complete">
+								<td><b><u>USAPhO</u></b></td>
+								<td>4/2</td>
+							</tr>
+
+							<tr class="complete">
 								<td><b><u>USABO Semifinals</u></b></td>
 								<td>4/4</td>
 							</tr>
@@ -137,14 +142,9 @@
 								<td>4/5 - 4/6 @ Rock Hill HS</td>
 							</tr>
 
-							<tr>
+							<tr class="progress">
 								<td><b>VC Regionals</b></td>
 								<td>4/9 - 4/23</td>
-							</tr>
-
-							<tr>
-								<td><b><u>USAPhO</u></b></td>
-								<td>TBD</td>
 							</tr>
 
 							<tr>
