--- a/sched.html
+++ b/sched.html
@@ -142,17 +142,17 @@
 								<td>4/5 - 4/6 @ Rock Hill HS</td>
 							</tr>
 
-							<tr class="progress">
+							<tr class="complete">
 								<td><b>VC Regionals</b></td>
 								<td>4/9 - 4/23</td>
 							</tr>
 
-							<tr>
+							<tr class="complete">
 								<td><b>UIL Regionals</b></td>
 								<td>4/26 - 4/27 @ Rock Hill HS</td>
 							</tr>
 
-							<tr>
+							<tr class="progress">
 								<td><b>VC State</b></td>
 								<td>5/1 - 5/11</td>
 							</tr>
@@ -170,7 +170,7 @@
 			<p class="footnote" style="color:#fff">Made by Warith Rahman via GitHub. Design inspired by 
 			<a href="https://www.ekzhang.com" target="_blank">Eric Zhang</a></p>
 			<p class="footnote" style="color:#fff">This site is unofficial, and not managed/sponsored by Allen ISD.</p>
-			<p class="footnote" style="color:#fff">Updated up to February 14, 2024.</p>
+			<p class="footnote" style="color:#fff">Updated up to May 8, 2024.</p>
 		</footer>
 	</body>
 </html>
