--- a/sched.html
+++ b/sched.html
@@ -152,14 +152,14 @@
 								<td>4/26 - 4/27 @ Rock Hill HS</td>
 							</tr>
 
-							<tr class="progress">
+							<tr class="complete">
 								<td><b>VC State</b></td>
 								<td>5/1 - 5/11</td>
 							</tr>
 
-							<tr>
+							<tr class="complete">
 								<td><b>UIL State</b></td>
-								<td>5/13 - 5/15 @ UT Austin</td>
+								<td>5/14 - 5/15 @ UT Austin</td>
 							</tr>
 						</table>
 					</section>
@@ -170,7 +170,7 @@
 			<p class="footnote" style="color:#fff">Made by Warith Rahman via GitHub. Design inspired by 
 			<a href="https://www.ekzhang.com" target="_blank">Eric Zhang</a></p>
 			<p class="footnote" style="color:#fff">This site is unofficial, and not managed/sponsored by Allen ISD.</p>
-			<p class="footnote" style="color:#fff">Updated up to May 8, 2024.</p>
+			<p class="footnote" style="color:#fff">Updated up to May 16, 2024.</p>
 		</footer>
 	</body>
 </html>
