--- a/sched.html
+++ b/sched.html
@@ -72,7 +72,7 @@
 								<td>12/15 - 12/18</td>
 							</tr>
 
-							<tr class="progress">
+							<tr class="complete">
 								<td><b>VC#3</b></td>
 								<td>1/8 - 2/3</td>
 							</tr>
