Bunch of changes in prep for 24-25 school year
this is most likely my last commit... rip end of an era

--- a/desc/computer_science.html
+++ b/desc/computer_science.html
@@ -17,7 +17,7 @@
 		</header>
 		<main>
 			<div class="container">
-				<h2>Coach: Eric Yang <font size="+1"><u>eric.yang@student.allenisd.org</u></font></h2>
+				<h2>Coach: Mr. Rush <font size="+1"><u>jacobw.rush@allenisd.org</u></font></h2>
 				<div class="row">
 					<section class="col-md-8 col-xl-9">
 						<p>Ooh, CS! UIL's Computer Science competition is actually split into two parts. The written test is a 
