--- a/desc/journalism.html
+++ b/desc/journalism.html
@@ -17,7 +17,7 @@
 		</header>
 		<main>
 			<div class="container">
-				<h2>Points of Contact: <ul>
+				<h2>Coaches: <ul>
 					<li> Ms. Smith <font size="+1"><u>elizabeth.smith@allenisd.org</u></font> </li>
 					<li> Ms. St. Clair <font size="+1"><u>kiara.stclair@allenisd.org</u></font> </li>
 				</ul></h2>
