--- a/desc/science.html
+++ b/desc/science.html
@@ -17,7 +17,10 @@
 		</header>
 		<main>
 			<div class="container">
-				<h2>Coach: Mrs. Lanier <font size="+1"><u>kathryn.lanier@allenisd.org</u></font></h2>
+				<h2>Coaches: <ul>
+					<li> Mrs. Lanier <font size="+1"><u>kathryn.lanier@allenisd.org</u></font> </li>
+					<li> Ms. Artem <font size="+1"><u>jessica.lanier@allenisd.org</u></font> </li>
+				</ul></h2>
 				<div class="row">
 					<section class="col-md-8 col-xl-9">
 						<p>Science is a very vast field, so as you'd expect UIL Science covers a lot of things. 20 questions are 
@@ -59,6 +62,7 @@
 			<p class="footnote" style="color:#fff">Made by Warith Rahman via GitHub. Design inspired by 
 			<a href="https://www.ekzhang.com" target="_blank">Eric Zhang</a></p>
 			<p class="footnote" style="color:#fff">This site is unofficial, and not managed/sponsored by Allen ISD.</p>
+			<p class="footnote" style="color:#fff">Updated up to August 5, 2023.</p>
 		</footer>
 	</body>
 </html>
