--- a/index.html
+++ b/index.html
@@ -23,11 +23,9 @@
 				<h2>What is this site?</h2>
 				<div class="row">
 					<section class="col-md-8 col-xl-8">
-						<p>Hey y'all! I'm Warith, and I'm a part of Allen's class of 2024. I wanted to make this site as an 
+						<p>Hey y'all! I'm Warith, and I was a part of Allen's class of 2024. I made this site as an 
 						alternative resource for all things Allen UIL. This should include descriptions of the many competitions 
-						offered, our practice schedule, and a mini FAQ below. Hope this helps everyone a lot, and if you have any 
-						questions or suggestions you can contact me <a style="color: #000" 
-						href="https://warithr621.github.io/media.html"><u>here</u></a>.</p>
+						offered, our practice schedule, and a mini FAQ below. Hope this helps everyone a lot!! Although I've left Allen since making this, it's now (in theory) maintained by Aidan Williams.
 						<p>You should also join the Discord server for more 
 							updates and practice resources <a href="https://discord.gg/5zWEJhWtud">here</a>, and follow the Instagram account to see 
 							more regular updates <a href="https://www.instagram.com/allenhs_uil/">here</a>.</p>
@@ -37,13 +35,11 @@
 						the acronym "UIL" in 1913. It features three primary areas: athletics, arts, and academics. The academic 
 						side of this focuses on a variety of competitions for students to show off their expertise, whether that 
 						be in STEM, a humanities competition, or even something not necessarily either!</p>
-						<p>Allen's been participating in this for a while, and just recently we finished 1st sweepstakes at the 
-						2023 State competition (trophy on right), including having 3 1st place teams in the state and having the best 6A spelling team for three years running!</p>
+						<p>Allen's been participating in this for a while, and in the past few years we've had some awesome results!! We were 2nd Sweepstakes in 2022 and 2024, and 1st Sweepstakes in 2023 (trophy on the right!!). We've also had multiple teams and individuals place for medals at the State meet, and even multiple champions!</p>
 						<br>
 						<h2>How do I join?</h2>
-						<p>If school just started at the time you're reading this, the UIL info meeting will typically be in late August at Lowery (August 29th for 23/24). If the meeting had already happened, you could try either 
-						asking someone who you know is in UIL, or try emailing Ms. Lanier at kathryn.lanier@allenisd.org</a> 
-							for more info on how to join. You can also view those meeting slides <a href="https://docs.google.com/presentation/d/1gn50nAyNOuv7QN7H37PUwdtHwrVdTDOpllJ4zKqz3Q0/edit?usp=sharing">at this link</a>.</p>
+						<p>The info meeting for 2024 - 2025 is yet to be decided, but will typically take place in late August or early September at Lowery. Feel free to contact Ms. Lanier at kathryn.lanier@allenisd.org
+							for more info on how to join. You can also contact our co-captains: Jessie Wang (Class of 2025) and Aristaa Bhardwaj (Class of 2026).</p>
 						<br>
 						<h2>When are competitions?</h2>
 						<p>The fall semester is primarily practices, which occur on a weekly basis at either Allen High School 
@@ -57,8 +53,7 @@
 						<h2>How are teams for District (and beyond) decided?</h2>
 						<p>As I mentioned, we have both practice meetings and interschool competitions throughout the year. As 
 						these progress, our coaches work together to pick the best of the best from all our competitors. With 
-						some exceptions, each team sent to Districts will typically have <b>6</b> people (exceptions include 3 in Computer 
-						Apps), which is different from past years. These teams are typically announced the week after Spring Break, about 2 weeks 
+						some exceptions, each team sent to Districts will typically have <b>6</b> people (with some exceptions in the writing events), which is an increase from the 4 allowed prior to 2022 - 2023. These teams are typically announced the week after Spring Break, about 2 weeks 
 						prior to Districts.</p>
 						<p>These people then represent us at our District meet. The top 3 individuals and the top team in each 
 						category get the honor of advancing to Regionals, and the same advancement rules apply to get to State. 
@@ -84,7 +79,7 @@
 			<p class="footnote" style="color:#fff">Made by Warith Rahman via GitHub. Design inspired by 
 			<a href="https://www.ekzhang.com" target="_blank">Eric Zhang</a></p>
 			<p class="footnote" style="color:#fff">This site is unofficial, and not managed/sponsored by Allen ISD.</p>
-			<p class="footnote" style="color:#fff">Updated up to December 9, 2023.</p>
+			<p class="footnote" style="color:#fff">Updated up to August 5, 2023.</p>
 		</footer>
 	</body>
 </html>
